--- a/app/views/home/_carousel.haml
+++ b/app/views/home/_carousel.haml
@@ -12,7 +12,7 @@
           .col-sm-7
             .mb-60
               %h1= fresh_book.title
-              %p.lead= fresh_book.description
+              %p.lead= markdown(fresh_book.description)
               %p.lead.small= authors_to_list(fresh_book)
               .general-align
                 = button_to t('button.by_now'), order_items_path(order_item: {quantity: 1, book_id: fresh_book.id}), { method: :post, remote: true, class: 'btn btn-primary', disabled: !fresh_book.active }
