--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -14,4 +14,10 @@
 // Overriding any non-variable SASS must be done after the fact.
 // For example, to change the default status-tag color:
 //
-//   .status_tag { background: #6090DB; }
+.status_tag {
+  background: #6090DB;
+}.approved {
+    background: #8AEB28;
+}.rejected {
+    background: #FC2D2D;
+}
