--- a/app/views/reviews/_reviews.haml
+++ b/app/views/reviews/_reviews.haml
@@ -7,7 +7,7 @@
       %div
         .general-message-date.hidden-xs= review.created_at
         .max-240
-          .general-message-verified= t('review.verified')
+          .general-message-verified= t('review.verified') if review.verified?
           .general-message-name= review.user_name
       = review.book_score
       %p= review.context
