--- a/app/views/checkout/partials/_delivery-xs.haml
+++ b/app/views/checkout/partials/_delivery-xs.haml
@@ -6,7 +6,7 @@
           %span.in-grey-600= t('delivery.method')
         %td.col-half
           .form-group.radio.mt-0.mb-0
-            =b.label(:class => 'radio-label') do
+            = b.label(class: 'radio-label') do
               = b.radio_button(class: 'radio-input', hidden: "true")
               %span.radio-icon
               %span.radio-text= b.text
