--- a/app/views/carts/_xs_order_items.haml
+++ b/app/views/carts/_xs_order_items.haml
@@ -4,7 +4,7 @@
       %span{'aria-hidden': "true"} &times;
     .general-img-wrap-table
       = link_to book_path(order_item.book) do
-        %img.cart-img-shadow{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
+        = image_tag img_of(order_item.book), alt: 'design-book', class: 'cart-img-shadow'
     = link_to book_path(order_item.book), class: 'text-as-link' do
       %p.title= order_item.book.title
     %table.table
