--- a/app/views/checkout/partials/_delivery-lg.haml
+++ b/app/views/checkout/partials/_delivery-lg.haml
@@ -12,7 +12,7 @@
       %tr
         %td
           .form-group.radio.mt-0.mb-0
-            =b.label(:class => 'radio-label') do
+            = b.label(class: 'radio-label') do
               = b.radio_button(class: 'radio-input', hidden: "true")
               %span.radio-icon
               %span.radio-text= b.text
