--- a/app/views/checkout/partials/_list_of_items.haml
+++ b/app/views/checkout/partials/_list_of_items.haml
@@ -2,7 +2,8 @@
   - current_order.order_items.each_with_index do |item, i|
     .general-cart-item.divider-lg
       .general-img-wrap-table
-        %img.cart-img-shadow{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
+        = link_to book_path(item.book) do
+          = image_tag img_of(item.book), alt: 'design-book', class: 'cart-img-shadow'
       %p.title= item.book.title
       %P.in-grey-600.fw-300= item.book.description.split('. ').first + '.'
       %table.table
@@ -39,9 +40,11 @@
         %tr
           %td
             .general-img-wrap-table
-              %img.cart-img-shadow.pull-left{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
+              = link_to book_path(item.book) do
+                = image_tag img_of(item.book), alt: 'design-book', class: 'cart-img-shadow pull-left'
           %td
-            %p.title= item.book.title
+            = link_to book_path(item.book), class: 'text-as-link' do
+              %p.title= item.book.title
             %p.in-grey-600.fw-300= item.book.description.split('. ').first + '.'
           %td
             %span.font-16.in-gold-500= number_to_currency item.book.price
