--- a/app/views/home/_carousel.haml
+++ b/app/views/home/_carousel.haml
@@ -8,7 +8,7 @@
         .row
           .col-sm-5
             .general-img-wrap
-              %img.img-shadow.general-thumbnail-img{src: "http://jonathantweedy.com/resources/thumbs/SmashingBook5ResponsiveWebDesign.jpg", alt: "design-book"}
+              = image_tag carousel_img(fresh_book), alt: fresh_book.title, class: 'img-shadow general-thumbnail-img'
           .col-sm-7
             .mb-60
               %h1= fresh_book.title
