--- a/app/views/orders/show.haml
+++ b/app/views/orders/show.haml
@@ -1,5 +1,5 @@
 %main.container.general-main-wrap
-  =link_to :back, class: 'general-back-link' do
+  =link_to orders_path, class: 'general-back-link' do
     %i.fa.fa-long-arrow-left.mr-15
     = t('button.back_to_orders')
   .row.mb-20
