--- a/app/views/books/show.haml
+++ b/app/views/books/show.haml
@@ -6,14 +6,14 @@
     .col-sm-6
       .product-gallery
         .mb-20
-          = image_tag view_img(@book, :last), alt: @book.title, class: 'img-responsive'
+          = image_tag view_img(@book), alt: @book.title, class: 'img-responsive'
         .images.clearfix
           %a.img-link{href: "#"}
-            = image_tag view_img(@book, :first), alt: @book.title
+            = image_tag view_img(@book, :last), alt: @book.title
           %a.img-link{href: "#"}
-            = image_tag view_img(@book, :first), alt: @book.title
+            = image_tag view_img(@book, :last), alt: @book.title
           %a.img-link{href: "#"}
-            = image_tag view_img(@book, :first), alt: @book.title
+            = image_tag view_img(@book, :last), alt: @book.title
     .col-sm-6
       %h1.mt-res-0= @book.title
       %p.lead.small= authors_to_list(@book)
